--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>colive values - find your remote working community, anywhere</title>
     <meta name="description" content="Find and book remote working communities tailored for remote work based on your values & interests! Thrive personally and professionally now!">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#ee6352">
-    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
+    <link rel="manifest" href="static/favicon/site.webmanifest">
+    <link rel="mask-icon" href="static/favicon/safari-pinned-tab.svg" color="#ee6352">
+    <link rel="shortcut icon" href="static/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#ee6352">
-    <meta name="msapplication-config" content="favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="static/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
      
-    <link href="css/main.min.css" rel="stylesheet" type="text/css" type="text/css">
+    <link href="static/css/main.min.css" rel="stylesheet" type="text/css" type="text/css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">
-                    <img src="img/logo/diamond-with-background.svg" alt="colive values Logo"><h1
+                    <img src="static/img/logo/diamond-with-background.svg" alt="colive values Logo"><h1
                         class="is-size-4 ml-4 has-text-weight-semibold is-family-secondary">colive values</h1>
                 </a>
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navmenu">
