--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="has-background-light">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>colive values - find your remote working community, anywhere</title>
-    <meta name="description" content="Find and book remote working communities tailored for remote work based on your values & interests! Thrive personally and professionally now!">
+    <title>colive values - Closing announcement</title>
+    <meta name="description"
+        content="Find and book remote working communities tailored for remote work based on your values & interests! Thrive personally and professionally now!">
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
     <link rel="manifest" href="static/favicon/site.webmanifest">
@@ -14,30 +16,128 @@
     <meta name="msapplication-TileColor" content="#ee6352">
     <meta name="msapplication-config" content="static/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-     
-    <link href="static/css/main.min.css" rel="stylesheet" type="text/css" type="text/css">
+
+    <link href="static/css/main.min.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
-    <nav class="navbar is-fixed-top role="navigation" aria-label="main navigation">
-        <div class="container">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="/">
-                    <img src="static/img/logo/diamond-with-background.svg" alt="colive values Logo"><h1
-                        class="is-size-4 ml-4 has-text-weight-semibold is-family-secondary">colive values</h1>
-                </a>
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navmenu">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </a>
-            </div>
+<body class="">
+    <div class="my-7">
+        <div class="is-centered is-flex is-align-items-center is-justify-content-center mb-3">
+            <img src="static/img/logo/diamond-with-background.svg" height="48" width="48" alt="colive values Logo">
+            <h1 class="is-size-4 ml-4 has-text-weight-semibold is-family-secondary has-text-black">colive values
+            </h1>
         </div>
-    </nav>
-    <section class="section mt-3" id="for-who-section">
-        <div class="title is-family-secondary is-size-3 mb-7">Thank you for believing in our mission.</div>
+        <div>
+            <p class="is-size-6 ml-2 has-text-grey has-text-centered">find your community, anywhere.</p>
+        </div>
+    </div>
+    <section class="section hero hero-primary mt-0 pt-3">
+        <div class="title is-family-secondary is-size-3 mb-5">Thank you for believing in our mission.</div>
+        <!-- Show date of occurance as November 4 -->
+        <div class="subtitle is-family-secondary is-size-5 mb-7">Effective November 9, 2024, colive values is shut down.
+        </div>
+
         <div class="content">
-            colive values is shutting down.
+            <p class="has-text-weight-semibold mb-6">Dear colive values community,</p>
+            <p>
+                It's with a heavy heart that we announce the closure of colive values. We've cherished every moment
+                of building this project with you, and empowering remote workers from all over the world to connect and
+                thrive
+                together.
+            </p>
+            <p>
+                After careful consideration, we have decided to shut down our services as colive values' business model
+                unfortunately didn’t work as we had hoped.
+            </p>
+            <p>We can't thank you enough for your support all throughout, and for understanding our
+                position during this time. <br><br> We wish
+                you all the best in your remote work adventures and hope our paths may cross again.</p>
+            <p class="">Happy wandering,<br><br></p>
+            Majd & Emma
+            <hr class="has-background-grey is-rounded my-7" style="margin: auto; width: 50%">
+            <p class="mb-6">If you're interested to keep up with our future works, here's where you can find us:</p>
+            <!-- Profile Cards Section -->
+            <div class="container is-centered is-flex is-justify-content-center is-align-items-stretch is-flex-wrap is-flex-direction-row"
+                style="gap: 2rem;">
+                <div class="card no-box-shadow" style="width: 225px;">
+                    <div class="card-image">
+                        <figure class="image m-0">
+                            <img src="static/img/profiles/majd.webp" alt="Majd's photo">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <h3 class="title is-4 mb-5">Majd</h3>
+                        <div class="content social-icons is-flex is-justify-content-space-around is-align-items-center">
+                            <a href="https://x.com/TheMajd_" target="_blank">
+                                <span class="icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                        <path
+                                            d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" />
+                                    </svg>
+                                </span>
+                            </a>
+                            <a href="https://linkedin.com/in/majd-alsado" target="_blank">
+                                <span class="icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                        <path
+                                            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+                                    </svg>
+                                </span>
+                            </a>
+                            <a href="https://alsado.ca" target="_blank">
+                                <span class="icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                        <path
+                                            d="M352 256c0 22.2-1.2 43.6-3.3 64l-185.3 0c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64l185.3 0c2.2 20.4 3.3 41.8 3.3 64zm28.8-64l123.1 0c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64l-123.1 0c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32l-116.7 0c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0l-176.6 0c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0L18.6 160C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192l123.1 0c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64L8.1 320C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6l176.6 0c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352l116.7 0zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6l116.7 0z" />
+                                    </svg>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card no-box-shadow" style="width: 225px;">
+                    <div class="card-image">
+                        <figure class="image m-0">
+                            <img src="static/img/profiles/emma.webp" alt="Emma's photo">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <h3 class="title is-4 mb-5">Emma</h3>
+                        <div class="content social-icons is-flex is-justify-content-space-around is-align-items-center">
+                            <a href="https://www.linkedin.com/in/emma-bousfield/" target="_blank">
+                                <span class="icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                        <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                        <path
+                                            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+                                    </svg>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <h2 class="subtitle is-size-5">Logistical Information</h2>
+            <ul>
+                <li><strong>Your Data:</strong> All personal data will be securely wiped after our closing
+                    date. Rest assured, there is no need for further action on your part.</li>
+                <li><strong>Contact Us:</strong> For any questions or further information, feel free to reach out to us
+                    at <a href="mailto:contact@colivevalues.com">contact@colivevalues.com</a>.</li>
+            </ul>
+
         </div>
+    </section>
 </body>
+
 </html>
+
+<style>
+    .icon {
+        width: 22px;
+        height: 22px;
+    }
+</style>
