Update index.html to use absolute paths for favicon and image resources

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <title>colive values - Closing announcement</title>
     <meta name="description"
         content="Find and book remote working communities tailored for remote work based on your values & interests! Thrive personally and professionally now!">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
-    <link rel="manifest" href="static/favicon/site.webmanifest">
-    <link rel="mask-icon" href="static/favicon/safari-pinned-tab.svg" color="#ee6352">
-    <link rel="shortcut icon" href="static/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/static/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/static/favicon/safari-pinned-tab.svg" color="#ee6352">
+    <link rel="shortcut icon" href="/static/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#ee6352">
-    <meta name="msapplication-config" content="static/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <link href="static/css/main.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/main.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="">
     <div class="my-7">
         <div class="is-centered is-flex is-align-items-center is-justify-content-center mb-3">
-            <img src="static/img/logo/diamond-with-background.svg" height="48" width="48" alt="colive values Logo">
+            <img src="/static/img/logo/diamond-with-background.svg" height="48" width="48" alt="colive values Logo">
             <h1 class="is-size-4 ml-4 has-text-weight-semibold is-family-secondary has-text-black">colive values
             </h1>
         </div>
@@ -62,7 +62,7 @@
                 <div class="card no-box-shadow" style="width: 225px;">
                     <div class="card-image">
                         <figure class="image m-0">
-                            <img src="static/img/profiles/majd.webp" alt="Majd's photo">
+                            <img src="/static/img/profiles/majd.webp" alt="Majd's photo">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -101,7 +101,7 @@
                 <div class="card no-box-shadow" style="width: 225px;">
                     <div class="card-image">
                         <figure class="image m-0">
-                            <img src="static/img/profiles/emma.webp" alt="Emma's photo">
+                            <img src="/static/img/profiles/emma.webp" alt="Emma's photo">
                         </figure>
                     </div>
                     <div class="card-content">
