Revise closure announcement in index.html for clarity and gratitude

--- a/index.html
+++ b/index.html
@@ -40,14 +40,12 @@
         <div class="content">
             <p class="has-text-weight-semibold mb-6">Dear colive values community,</p>
             <p>
-                It's with a heavy heart that we announce the closure of colive values. We've cherished every moment
-                of building this project with you, and empowering remote workers from all over the world to connect and
-                thrive
-                together.
+                With deep gratitude, we want to thank you for being part of colive values. Together, we empowered remote
+                workers worldwide to connect, share, and thrive as one community.
             </p>
             <p>
-                After careful consideration, we have decided to shut down our services as colive values' business model
-                unfortunately didn’t work as we had hoped.
+                After careful consideration, we have decided to shut down our services. Despite our best efforts, we
+                found that our model didn’t quite align with our vision for sustainable growth.
             </p>
             <p>We can't thank you enough for your support all throughout, and for understanding our
                 position during this time. <br><br> We wish
@@ -123,7 +121,8 @@
             <hr>
             <h2 class="subtitle is-size-5">Logistical Information</h2>
             <ul>
-                <li><strong>Your Data:</strong> All personal data will be securely wiped after our closing
+                <li><strong>Your Data:</strong> All personal data is set to be wiped securely after 1 year of our
+                    closing
                     date. Rest assured, there is no need for further action on your part.</li>
                 <li><strong>Contact Us:</strong> For any questions or further information, feel free to reach out to us
                     at <a href="mailto:contact@colivevalues.com">contact@colivevalues.com</a>.</li>
