--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 found that our model didn’t quite align with our vision for sustainable growth.
             </p>
             <p>We can't thank you enough for your support all throughout, and for understanding our
-                position during this time. <br><br> We wish
-                you all the best in your remote work adventures and hope our paths may cross again.</p>
+                position during this time. <br>
+                We wish you all the best in your remote work adventures and hope our paths may cross again.</p>
             <p class="">Happy wandering,<br><br></p>
             Majd & Emma
             <hr class="has-background-grey is-rounded my-7" style="margin: auto; width: 50%">
@@ -68,7 +68,7 @@
                         <div class="content social-icons is-flex is-justify-content-space-around is-align-items-center">
                             <a href="https://x.com/TheMajd_" target="_blank">
                                 <span class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="gray" viewBox="0 0 512 512">
                                         <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                                         <path
                                             d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" />
@@ -77,7 +77,7 @@
                             </a>
                             <a href="https://linkedin.com/in/majd-alsado" target="_blank">
                                 <span class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="gray" viewBox="0 0 448 512">
                                         <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                                         <path
                                             d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
@@ -86,7 +86,7 @@
                             </a>
                             <a href="https://alsado.ca" target="_blank">
                                 <span class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="gray" viewBox="0 0 512 512">
                                         <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                                         <path
                                             d="M352 256c0 22.2-1.2 43.6-3.3 64l-185.3 0c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64l185.3 0c2.2 20.4 3.3 41.8 3.3 64zm28.8-64l123.1 0c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64l-123.1 0c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32l-116.7 0c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0l-176.6 0c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0L18.6 160C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192l123.1 0c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64L8.1 320C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6l176.6 0c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352l116.7 0zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6l116.7 0z" />
@@ -107,7 +107,7 @@
                         <div class="content social-icons is-flex is-justify-content-space-around is-align-items-center">
                             <a href="https://www.linkedin.com/in/emma-bousfield/" target="_blank">
                                 <span class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="gray" viewBox="0 0 448 512">
                                         <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                                         <path
                                             d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
